--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,8 +3,5 @@
 
 # These owners will be the default owners for everything in
 # the repo. Unless a later match takes precedence,
-# @josephmachado will be requested for
+# @tselovalnikova will be requested for
 # review when someone opens a pull request.
-
-# REPLACE WITH YOUR GITHUB USER ID !!!!
-*       @josephmachado 
